@@ -1,19 +1,19 @@
 /**
  * DSS - Digital Signature Services
  * Copyright (C) 2015 European Commission, provided under the CEF programme
- * 
+ * <p>
  * This file is part of the "DSS - Digital Signature Services" project.
- * 
+ * <p>
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ * <p>
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
+ * <p>
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
@@ -50,9 +50,9 @@ import org.apache.hc.client5.http.impl.routing.DefaultProxyRoutePlanner;
 import org.apache.hc.client5.http.io.HttpClientConnectionManager;
 import org.apache.hc.client5.http.protocol.HttpClientContext;
 import org.apache.hc.client5.http.routing.HttpRoutePlanner;
+import org.apache.hc.client5.http.ssl.DefaultClientTlsStrategy;
 import org.apache.hc.client5.http.ssl.DefaultHostnameVerifier;
-import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactory;
-import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactoryBuilder;
+import org.apache.hc.client5.http.ssl.TlsSocketStrategy;
 import org.apache.hc.core5.http.ContentType;
 import org.apache.hc.core5.http.HttpEntity;
 import org.apache.hc.core5.http.HttpException;
@@ -62,6 +62,7 @@ import org.apache.hc.core5.http.io.SocketConfig;
 import org.apache.hc.core5.http.io.entity.BufferedHttpEntity;
 import org.apache.hc.core5.http.io.entity.InputStreamEntity;
 import org.apache.hc.core5.http.protocol.HttpContext;
+import org.apache.hc.core5.reactor.ssl.SSLBufferMode;
 import org.apache.hc.core5.ssl.SSLContextBuilder;
 import org.apache.hc.core5.ssl.TrustStrategy;
 import org.apache.hc.core5.util.TimeValue;
@@ -162,6 +163,9 @@ public class CommonsDataLoader implements DataLoader {
 
 	/** Contains rules credentials for authentication to different resources */
 	private Map<HostConnection, UserCredentials> authenticationMap;
+
+	/** A list of preferred auth schemes, to be executed in the given order */
+	private List<String> targetPreferredAuthSchemes;
 
 	/**
 	 * Used SSL protocol
@@ -605,19 +609,6 @@ public class CommonsDataLoader implements DataLoader {
 	}
 
 	/**
-	 * Sets whether the preemptive authentication should be used.
-	 * When set to TRUE, the client sends authentication details (i.e. user credentials) within the initial request
-	 * to the remote host, instead of sending the credentials only after a request from the host.
-	 * Please note that the preemptive authentication should not be used over an insecure connection.
-	 * Default : FALSE (preemptive authentication is not used)
-	 *
-	 * @param preemptiveAuthentication whether the preemptive authentication should be used
-	 */
-	public void setPreemptiveAuthentication(boolean preemptiveAuthentication) {
-		this.preemptiveAuthentication = preemptiveAuthentication;
-	}
-
-	/**
 	 * Adds authentication credentials to the existing {@code authenticationMap}
 	 *
 	 * @param host
@@ -637,6 +628,39 @@ public class CommonsDataLoader implements DataLoader {
 		final HostConnection hostConnection = new HostConnection(host, port, scheme);
 		final UserCredentials userCredentials = new UserCredentials(login, password);
 		return addAuthentication(hostConnection, userCredentials);
+	}
+
+	/**
+	 * Gets the target preferred authentication scheme, to be called in the given order
+	 *
+	 * @return a list of {@link String}s
+	 */
+	public List<String> getTargetPreferredAuthSchemes() {
+		return targetPreferredAuthSchemes;
+	}
+
+	/**
+	 * Sets a list of target preferred authentication schemes,
+	 * to be executed on the given order on connection establishing
+	 * Default: "Bearer", "Digest", "Basic".
+	 *
+	 * @param targetPreferredAuthSchemes a list of {@link String}s
+	 */
+	public void setTargetPreferredAuthSchemes(List<String> targetPreferredAuthSchemes) {
+		this.targetPreferredAuthSchemes = targetPreferredAuthSchemes;
+	}
+
+	/**
+	 * Sets whether the preemptive authentication should be used.
+	 * When set to TRUE, the client sends authentication details (i.e. user credentials) within the initial request
+	 * to the remote host, instead of sending the credentials only after a request from the host.
+	 * Please note that the preemptive authentication should not be used over an insecure connection.
+	 * Default : FALSE (preemptive authentication is not used)
+	 *
+	 * @param preemptiveAuthentication whether the preemptive authentication should be used
+	 */
+	public void setPreemptiveAuthentication(boolean preemptiveAuthentication) {
+		this.preemptiveAuthentication = preemptiveAuthentication;
 	}
 
 	/**
@@ -742,7 +766,6 @@ public class CommonsDataLoader implements DataLoader {
 
 	@Override
 	public byte[] get(final String urlString) {
-
 		if (Protocol.isFileUrl(urlString)) {
 			return fileGet(urlString);
 		} else if (Protocol.isHttpUrl(urlString)) {
@@ -855,8 +878,8 @@ public class CommonsDataLoader implements DataLoader {
 
 	private URL getURL(String urlString) {
 		try {
-			return new URL(urlString);
-		} catch (MalformedURLException e) {
+			return URI.create(urlString).toURL();
+		} catch (MalformedURLException | IllegalArgumentException e) {
 			throw new DSSExternalResourceException("Unable to create URL instance", e);
 		}
 	}
@@ -889,25 +912,22 @@ public class CommonsDataLoader implements DataLoader {
 
 	@Override
 	public byte[] post(final String url, final byte[] content) {
-
 		LOG.debug("Fetching data via POST from url {}", url);
 
-		HttpPost httpRequest = null;
+		final URI uri = URI.create(Utils.trim(url));
+		HttpPost httpRequest = new HttpPost(uri);
 		CloseableHttpClient client = null;
-		try {
-			final URI uri = URI.create(Utils.trim(url));
-			httpRequest = new HttpPost(uri);
 
-			// The length for the InputStreamEntity is needed, because some receivers (on the other side)
-			// need this information.
-			// To determine the length, we cannot read the content-stream up to the end and re-use it afterwards.
-			// This is because, it may not be possible to reset the stream (= go to position 0).
-			// So, the solution is to cache temporarily the complete content data (as we do not expect much here) in
-			// a byte-array.
-			final ByteArrayInputStream bis = new ByteArrayInputStream(content);
+		// The length for the InputStreamEntity is needed, because some receivers (on the other side)
+		// need this information.
+		// To determine the length, we cannot read the content-stream up to the end and re-use it afterwards.
+		// This is because, it may not be possible to reset the stream (= go to position 0).
+		// So, the solution is to cache temporarily the complete content data (as we do not expect much here) in
+		// a byte-array.
+		try (final ByteArrayInputStream bis = new ByteArrayInputStream(content);
+			 final HttpEntity httpEntity = new InputStreamEntity(bis, content.length, toContentType(contentType));
+			 final HttpEntity requestEntity = new BufferedHttpEntity(httpEntity)) {
 
-			final HttpEntity httpEntity = new InputStreamEntity(bis, content.length, toContentType(contentType));
-			final HttpEntity requestEntity = new BufferedHttpEntity(httpEntity);
 			httpRequest.setEntity(requestEntity);
 
 			client = getHttpClient(url);
@@ -918,7 +938,6 @@ public class CommonsDataLoader implements DataLoader {
 
 		} finally {
 			closeQuietly(httpRequest, client);
-
 		}
 	}
 
@@ -997,9 +1016,14 @@ public class CommonsDataLoader implements DataLoader {
 		}
 	}
 
-	private HttpClientConnectionManager getConnectionManager() {
+	/**
+	 * Gets a configured {@code HttpClientConnectionManager}
+	 *
+	 * @return {@link HttpClientConnectionManager}
+	 */
+	protected HttpClientConnectionManager getConnectionManager() {
 		final PoolingHttpClientConnectionManagerBuilder builder = PoolingHttpClientConnectionManagerBuilder.create()
-				.setSSLSocketFactory(getConnectionSocketFactoryHttps())
+				.setTlsSocketStrategy(getTlsSocketStrategy())
 				.setDefaultSocketConfig(getSocketConfig())
 				.setMaxConnTotal(getConnectionsMaxTotal())
 				.setMaxConnPerRoute(getConnectionsMaxPerRoute());
@@ -1017,13 +1041,23 @@ public class CommonsDataLoader implements DataLoader {
 		return connectionManager;
 	}
 
-	private SocketConfig getSocketConfig() {
+	/**
+	 * Gets a configured {@code SocketConfig}
+	 *
+	 * @return {@link SocketConfig}
+	 */
+	protected SocketConfig getSocketConfig() {
 		SocketConfig.Builder socketConfigBuilder = SocketConfig.custom();
 		socketConfigBuilder.setSoTimeout(timeoutSocket);
 		return socketConfigBuilder.build();
 	}
 
-	private SSLConnectionSocketFactory getConnectionSocketFactoryHttps() {
+	/**
+	 * Gets a configured {@code SSLContextBuilder} containing an SSL connection trust configuration
+	 *
+	 * @return {@link SSLContextBuilder}
+	 */
+	protected SSLContextBuilder getSSLContextBuilder() {
 		try {
 			SSLContextBuilder sslContextBuilder = SSLContextBuilder.create();
 			sslContextBuilder.setProtocol(sslProtocol);
@@ -1048,14 +1082,23 @@ public class CommonsDataLoader implements DataLoader {
 					sslContextBuilder.loadTrustMaterial(sslKeyStore, trustStrategy);
 				}
 			}
-
-			SSLConnectionSocketFactoryBuilder sslConnectionSocketFactoryBuilder = new SSLConnectionSocketFactoryBuilder();
-			return sslConnectionSocketFactoryBuilder.setSslContext(sslContextBuilder.build())
-					.setTlsVersions(getSupportedSSLProtocols()).setCiphers(getSupportedSSLCipherSuites())
-					.setHostnameVerifier(getHostnameVerifier()).build();
-
+			return sslContextBuilder;
 		} catch (final Exception e) {
-			throw new IllegalArgumentException("Unable to configure the SSLContext/SSLConnectionSocketFactory", e);
+			throw new IllegalArgumentException("Unable to configure the SSLContext", e);
+		}
+	}
+
+	/**
+	 * Gets a configured {@code TlsSocketStrategy}
+	 *
+	 * @return {@link TlsSocketStrategy}
+	 */
+	protected TlsSocketStrategy getTlsSocketStrategy() {
+		try {
+			return new DefaultClientTlsStrategy(getSSLContextBuilder().build(), getSupportedSSLProtocols(),
+					getSupportedSSLCipherSuites(), SSLBufferMode.STATIC, getHostnameVerifier());
+		} catch (final Exception e) {
+			throw new IllegalArgumentException("Unable to configure the TLSSocketStrategy", e);
 		}
 	}
 
@@ -1124,14 +1167,8 @@ public class CommonsDataLoader implements DataLoader {
 
 		httpClientBuilder = configCredentials(httpClientBuilder, url);
 
-		final RequestConfig.Builder requestConfigBuilder = RequestConfig.custom()
-				.setConnectionRequestTimeout(timeoutConnectionRequest)
-				.setResponseTimeout(timeoutResponse)
-				.setConnectionKeepAlive(connectionKeepAlive)
-				.setRedirectsEnabled(redirectsEnabled);
-
 		httpClientBuilder.setConnectionManager(getConnectionManager())
-				.setDefaultRequestConfig(requestConfigBuilder.build())
+				.setDefaultRequestConfig(getRequestConfig())
 				.setRetryStrategy(retryStrategy);
 		
 		return httpClientBuilder;
@@ -1145,6 +1182,29 @@ public class CommonsDataLoader implements DataLoader {
 	 */
 	protected synchronized CloseableHttpClient getHttpClient(final String url) {
 		return getHttpClientBuilder(url).build();
+	}
+
+	/**
+	 * Gets a configured {@code RequestConfig.Builder}
+	 *
+	 * @return {@link RequestConfig.Builder}
+	 */
+	protected RequestConfig.Builder getRequestConfigBuilder() {
+		return RequestConfig.custom()
+				.setTargetPreferredAuthSchemes(targetPreferredAuthSchemes)
+				.setConnectionRequestTimeout(timeoutConnectionRequest)
+				.setResponseTimeout(timeoutResponse)
+				.setConnectionKeepAlive(connectionKeepAlive)
+				.setRedirectsEnabled(redirectsEnabled);
+	}
+
+	/**
+	 * Builds and gets a {@code RequestConfig}
+	 *
+	 * @return {@link RequestConfig}
+	 */
+	protected RequestConfig getRequestConfig() {
+		return getRequestConfigBuilder().build();
 	}
 
 	/**
