@@ -1,19 +1,19 @@
 /**
  * DSS - Digital Signature Services
  * Copyright (C) 2015 European Commission, provided under the CEF programme
- * 
+ * <p>
  * This file is part of the "DSS - Digital Signature Services" project.
- * 
+ * <p>
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ * <p>
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
+ * <p>
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
@@ -29,7 +29,7 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -44,7 +44,7 @@ class MaxSizeInputStreamTest {
 
     @BeforeEach
     void init() throws Exception {
-        urlConnection = new URL(HTTP_URL_TO_LOAD).openConnection();;
+        urlConnection = URI.create(HTTP_URL_TO_LOAD).toURL().openConnection();
         urlConnection.setDoInput(true);
     }
 
@@ -89,8 +89,7 @@ class MaxSizeInputStreamTest {
              MaxSizeInputStream maxSizeInputStream = new MaxSizeInputStream(is, 1000000, HTTP_URL_TO_LOAD);
              ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
             final byte[] buffer = new byte[2048];
-            int count;
-            while ((count = maxSizeInputStream.read(buffer, 0, buffer.length)) > 0) {
+            while (maxSizeInputStream.read(buffer, 0, buffer.length) > 0) {
                 baos.write(buffer);
             }
             result = baos.toByteArray();
@@ -107,8 +106,7 @@ class MaxSizeInputStreamTest {
              MaxSizeInputStream maxSizeInputStream = new MaxSizeInputStream(is, 10, HTTP_URL_TO_LOAD);
              ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
             final byte[] buffer = new byte[2048];
-            int count;
-            while ((count = maxSizeInputStream.read(buffer, 0, buffer.length)) > 0) {
+            while (maxSizeInputStream.read(buffer, 0, buffer.length) > 0) {
                 baos.write(buffer);
             }
         } catch (IOException e) {
