@@ -1,19 +1,19 @@
 /**
  * DSS - Digital Signature Services
  * Copyright (C) 2015 European Commission, provided under the CEF programme
- * 
+ * <p>
  * This file is part of the "DSS - Digital Signature Services" project.
- * 
+ * <p>
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ * <p>
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
+ * <p>
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
@@ -24,6 +24,7 @@ import eu.europa.esig.dss.model.DSSException;
 import eu.europa.esig.trustedlist.jaxb.tsl.NonEmptyMultiLangURIType;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 
@@ -42,7 +43,7 @@ public class OfficialJournalSchemeInformationURI implements LOTLSigningCertifica
 	 * @param officialJournalURL {@link String} OJ URL
 	 */
 	public OfficialJournalSchemeInformationURI(String officialJournalURL) {
-		Objects.requireNonNull(officialJournalURL);
+		Objects.requireNonNull(officialJournalURL, "Official Journal URL cannot be null!");
 		this.officialJournalURL = officialJournalURL;
 	}
 
@@ -56,9 +57,9 @@ public class OfficialJournalSchemeInformationURI implements LOTLSigningCertifica
 
 	private String getOJDomain() {
 		try {
-			URL uri = new URL(officialJournalURL);
+			URL uri = URI.create(officialJournalURL).toURL();
 			return uri.getHost();
-		} catch (MalformedURLException e) {
+		} catch (MalformedURLException | IllegalArgumentException e) {
 			throw new DSSException("Incorrect format of Official Journal URL [" + officialJournalURL + "] is provided", e);
 		}
 	}
